Framework container and agent classpath locate framework libraries