@@ -1,15 +1,18 @@
 
 package com.unnsvc.erhena.core.classpath;
 
+import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.net.URL;
 
-import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.jdt.core.IClasspathContainer;
 import org.eclipse.jdt.core.IClasspathEntry;
 import org.eclipse.jdt.core.JavaCore;
+
+import com.unnsvc.erhena.common.ErhenaUtils;
 
 public class RhenaFrameworkContainer implements IClasspathContainer {
 
@@ -24,16 +27,16 @@ public class RhenaFrameworkContainer implements IClasspathContainer {
 	public IClasspathEntry[] getClasspathEntries() {
 
 		try {
-			URL coreLib = FileLocator.resolve(new URL("platform:/plugin/com.unnsvc.erhena.platform/embedded/com.unnsvc.rhena.core-0.0.1-SNAPSHOT.jar"));
-			URL frameworkLib = FileLocator.resolve(new URL("platform:/plugin/com.unnsvc.erhena.platform/embedded/com.unnsvc.rhena.lifecycle-0.0.1-SNAPSHOT.jar"));
-			URL commonLib = FileLocator.resolve(new URL("platform:/plugin/com.unnsvc.erhena.platform/embedded/com.unnsvc.rhena.common-0.0.1-SNAPSHOT.jar"));
-
+			URL commonLib = new File(ErhenaUtils.locateClasspath("com.unnsvc.rhena.common")).toURI().toURL();
+			URL coreLib = new File(ErhenaUtils.locateClasspath("com.unnsvc.rhena.core")).toURI().toURL();
+			URL lifecycleLib = new File(ErhenaUtils.locateClasspath("com.unnsvc.rhena.lifecycle")).toURI().toURL();
+			
 			return new IClasspathEntry[] { 
-					JavaCore.newLibraryEntry(new Path(frameworkLib.getFile()), null, null),
+					JavaCore.newLibraryEntry(new Path(commonLib.getFile()), null, null),
 					JavaCore.newLibraryEntry(new Path(coreLib.getFile()), null, null),
-					JavaCore.newLibraryEntry(new Path(commonLib.getFile()), null, null)
+					JavaCore.newLibraryEntry(new Path(lifecycleLib.getFile()), null, null)
 			};
-		} catch (IOException ioe) {
+		} catch (IOException | URISyntaxException ioe) {
 			/**
 			 * @TODO pass the entries into the container instead of creating
 			 *       them here, then we don't need to catch this exception
